Fix exec title overlap

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ nav li {
     color: white;
 }
 
-/* Execs */
+/* Execs Section */
 .exec-bio img {
     height: 200px;
     width: 200px;
@@ -181,6 +181,7 @@ nav li {
     z-index: 1;
 }
 
+/* Exec Modal Overlay */
 .exec-image-container {
     padding: 0; /* Reset Bootstrap padding*/
     margin-bottom: 12px;
@@ -192,26 +193,29 @@ nav li {
     height: auto;
 }
 
-.exec-description {
-    max-height: 25vh;
-    overflow-y: auto;
-    padding: 0;
-}
-
 .exec-name > h3 {
-    margin: 0;
+    margin: 0; /* Reset margins */
     font-weight: bold;
     text-align: right;
+    margin-bottom: 12px;
 }
 
-.exec-name span {
+.exec-name > span {
     font-weight: 100;
     font-size: 24px;
     color: rgb(26,26,26);
     display: block;
     line-height: 10px;
     text-align: right;
+    margin-bottom: 24px; /* Give space when small screen stacks*/
 }
+
+.exec-description {
+    max-height: 25vh;
+    overflow-y: auto;
+    padding: 0;
+}
+
 
 /* News */
 .news-item {
